@@ -9,9 +9,6 @@ if (process.env.NODE_ENV === 'development') {
 var debug = require('debug')('algoliasearch:AlgoliaSearch');
 var foreach = require('foreach');
 
-var notImplemented = 'algoliasearch: Not implemented in this environment.\n' +
-  'If you feel this is a mistake, write to support@algolia.com';
-
 /*
  * Algolia Search library initialization
  * https://www.algolia.com/
@@ -395,21 +392,12 @@ AlgoliaSearch.prototype = {
     }
   },
   // environment specific methods
-  destroy: function() {
-    throw new Error(notImplemented);
-  },
-  enableRateLimitForward: function() {
-    throw new Error(notImplemented);
-  },
-  disableRateLimitForward: function() {
-    throw new Error(notImplemented);
-  },
-  useSecuredAPIKey: function() {
-    throw new Error(notImplemented);
-  },
-  disableSecuredAPIKey: function() {
-    throw new Error(notImplemented);
-  },
+  destroy: notImplemented,
+  enableRateLimitForward: notImplemented,
+  disableRateLimitForward: notImplemented,
+  useSecuredAPIKey: notImplemented,
+  disableSecuredAPIKey: notImplemented,
+  generateSecuredApiKey: notImplemented,
   /*
    * Index class constructor.
    * You should not use this method directly but use initIndex() function
@@ -1457,4 +1445,11 @@ function prepareHost(protocol) {
   return function prepare(host) {
     return protocol + '//' + host.toLowerCase();
   };
+}
+
+function notImplemented() {
+  var message = 'algoliasearch: Not implemented in this environment.\n' +
+  'If you feel this is a mistake, write to support@algolia.com';
+
+  throw new Error(message);
 }
