@@ -13,6 +13,7 @@ UNREALEASED
     * FEATURE (Node.js): add client.disableSecuredAPIKey()
     * BREAKING CHANGE (Node.js): client.setTimeout renamed to client.setRequestTimeout
     * TEST: add test around setRequestTimeout
+    * FEATURE (Node.js): add client.generateSecuredApiKey()
 
 2015-10-04  3.0.7
     * MIGRATION: throw on V2 .search() usage:
